implemented navbar mobilenav and theme

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @import url("../styles/theme.css");
 
 body {
@@ -8,10 +9,6 @@ body {
 }
 
 @layer utilities {
-  .no-focus {
-    @apply ring-0 ring-transparent;
-  }
-
   .flex-center {
     @apply flex justify-center items-center;
   }
@@ -25,7 +22,7 @@ body {
   }
 
   .card-wrapper {
-    @apply bg-light-900 dark:dark-gradient shadow-light-100;
+    @apply bg-light-900 dark:dark-gradient shadow-light-100 dark:shadow-dark-100;
   }
 
   .btn {
@@ -41,7 +38,7 @@ body {
   }
 
   .markdown {
-    @apply max-w-full prose dark:prose-p text-light-700 dark:prose;
+    @apply max-w-full prose dark:prose-p:text-light-700 dark:prose-ol:text-light-700 dark:prose-ul:text-light-500 dark:prose-strong:text-white dark:prose-headings:text-white prose-headings:text-dark-400 prose-h1:text-dark-300 prose-h2:text-dark-300 prose-p:text-dark-500 prose-ul:text-dark-500 prose-ol:text-dark-500;
   }
 
   .primary-gradient {
@@ -57,8 +54,12 @@ body {
   }
 
   .tab {
-    @apply min-h-full dark:bg-dark-400 bg-light-800 text-light-5;
+    @apply min-h-full dark:bg-dark-400 bg-light-800 text-light-500 dark:data-[state=active]:bg-dark-300 data-[state=active]:bg-primary-100 data-[state=active]:text-primary-500 !important;
   }
+}
+
+.no-focus {
+  @apply focus-visible:ring-0 focus-visible:ring-transparent focus-visible:ring-offset-0 !important;
 }
 
 .active-theme {
@@ -110,16 +111,19 @@ code {
   /* These are technically the same, but use both */
   overflow-wrap: break-word;
   word-wrap: break-word;
+
   -ms-word-break: break-all;
   /* This is the dangerous one in WebKit, as it breaks things wherever */
   word-break: break-all;
   /* Instead use this non-standard one: */
   word-break: break-word;
+
   /* Adds a hyphen where the word breaks, if supported (No Blink) */
   -ms-hyphens: auto;
   -moz-hyphens: auto;
   -webkit-hyphens: auto;
   hyphens: auto;
+
   padding: 2px;
   color: #ff7000 !important;
 }
@@ -133,13 +137,14 @@ code {
   width: 100%;
   display: block;
   overflow-x: auto;
+
   color: inherit !important;
 }
-
 /* Markdown End */
+
 /* Clerk */
 .cl-internal-b3fm6y {
-  background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%);
+  background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%) !important;
 }
 
 .hash-span {
@@ -153,7 +158,7 @@ code {
   display: none;
 }
 
-/* Hide scrollbar for IE, Edge, and Firefox */
+/* Hide scrollbar for IE, Edge and Firefox */
 .no-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
