added community page and scrollbar css

--- a/app/globals.css
+++ b/app/globals.css
@@ -181,3 +181,35 @@ code {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #292929;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #fca055;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #888;
+}
+
+/* For Firefox */
+.scroll-container {
+  scrollbar-width: thin;
+  scrollbar-color: #a0a0a0 #f5f5f5;
+}
+
+/* For Edge and Internet Explorer */
+.scroll-container {
+  -ms-overflow-style: none; /* Hides the scrollbar */
+}
+
+.scroll-container::-webkit-scrollbar {
+  display: none; /* Hides the scrollbar in WebKit based browsers */
+}
