updated code block display and unneccasry view interaction

--- a/app/globals.css
+++ b/app/globals.css
@@ -57,7 +57,7 @@ body {
   }
 
   .markdown {
-    @apply max-w-full prose dark:prose-p:text-light-700 dark:prose-ol:text-light-700 dark:prose-ul:text-light-500 dark:prose-strong:text-white dark:prose-headings:text-white prose-headings:text-dark-400 prose-h1:text-dark-300 prose-h2:text-dark-300 prose-p:text-dark-500 prose-ul:text-dark-500 prose-ol:text-dark-500;
+    @apply w-full max-sm:w-[300px] prose dark:prose-p:text-light-700 dark:prose-ol:text-light-700 dark:prose-ul:text-light-500 dark:prose-strong:text-white dark:prose-headings:text-white prose-headings:text-dark-400 prose-h1:text-dark-300 prose-h2:text-dark-300 prose-p:text-dark-500 prose-ul:text-dark-500 prose-ol:text-dark-500;
   }
 
   .primary-gradient {
@@ -148,15 +148,12 @@ code {
 }
 
 .markdown pre {
-  display: grid;
+  display: flex;
   width: 100%;
 }
 
 .markdown pre code {
   width: 100%;
-  display: flex;
-  overflow-x: auto;
-
   color: inherit !important;
 }
 /* Markdown End */
